Updated openapi definition and backend implementation
